--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lens-killer",
+  "name": "opspilot",
   "private": true,
   "license": "SEE LICENSE IN LICENSE",
   "version": "0.1.0",
