--- a/package.json
+++ b/package.json
@@ -1,9 +1,27 @@
 {
   "name": "opspilot",
   "private": true,
+  "description": "Fast Kubernetes IDE with autonomous AI debugging. Tauri + Rust + Ollama for read-only incident analysis and native performance.",
   "license": "SEE LICENSE IN LICENSE",
   "version": "0.1.0",
   "type": "module",
+  "keywords": [
+    "kubernetes",
+    "k8s",
+    "devops",
+    "sre",
+    "observability",
+    "ai",
+    "llm",
+    "ollama",
+    "tauri",
+    "rust",
+    "debugging",
+    "incident-analysis",
+    "read-only",
+    "kubectl",
+    "lens-alternative"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
