--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,3 +59,31 @@ jobs:
           releaseDraft: true
           prerelease: false
           args: ${{ matrix.platform == 'macos-latest' && '--target universal-apple-darwin' || '' }}
+
+      - name: Compress binary (macOS)
+        if: matrix.platform == 'macos-latest'
+        run: |
+          cp src-tauri/target/release/bundle/macos/OpsPilot.app/Contents/MacOS/OpsPilot opspilot
+          tar -czf opspilot-x86_64-apple-darwin.tar.gz opspilot
+          tar -czf opspilot-aarch64-apple-darwin.tar.gz opspilot
+          rm opspilot
+
+      - name: Compress binary (Linux)
+        if: matrix.platform == 'ubuntu-latest'
+        run: |
+          cp src-tauri/target/release/opspilot opspilot
+          tar -czf opspilot-x86_64-unknown-linux-gnu.tar.gz opspilot
+          rm opspilot
+
+      - name: Compress binary (Windows)
+        if: matrix.platform == 'windows-latest'
+        run: |
+          Compress-Archive -Path src-tauri/target/release/opspilot.exe -DestinationPath opspilot-x86_64-pc-windows-msvc.zip
+
+      - name: Upload binaries
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            opspilot-*.tar.gz
+            opspilot-*.zip
