chore: add dmg and other artifacts to release and bump to v0.1.6

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -101,6 +101,7 @@ jobs:
             opspilot-*.tar.gz
             opspilot-*.zip
             src-tauri/target/universal-apple-darwin/release/bundle/macos/opspilot.app.tar.gz
-            src-tauri/target/release/bundle/nsis/opspilot_*.exe
-            src-tauri/target/release/bundle/deb/opspilot_*.deb
-            src-tauri/target/release/bundle/appimage/opspilot_*.AppImage
+            src-tauri/target/universal-apple-darwin/release/bundle/dmg/*.dmg
+            src-tauri/target/release/bundle/nsis/*.exe
+            src-tauri/target/release/bundle/deb/*.deb
+            src-tauri/target/release/bundle/appimage/*.AppImage
