--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,6 +26,7 @@ futures = "0.3"
 portable-pty = "0.8"
 chrono = { version = "0.4", features = ["serde", "clock"] }
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
+walkdir = "2.5.0"
 
 [features]
 default = ["custom-protocol"]
