--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "opspilot"
-version = "0.1.56"
+version = "0.2.1"
 description = "Fast Kubernetes IDE with autonomous AI debugging. Tauri + Rust + Ollama for read-only incident analysis."
 authors = ["you"]
 license = "BUSL-1.1"
@@ -28,6 +28,8 @@ chrono = { version = "0.4", features = ["serde", "clock"] }
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 walkdir = "2.5.0"
 fastembed = "4"
+urlencoding = "2"
+uuid = { version = "1", features = ["v4"] }
 
 [features]
 default = ["custom-protocol"]
