--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   ],
   "scripts": {
     "dev": "vite --port 1422 --host 127.0.0.1",
-    "build:python": "scripts/build-python-sidecar.sh",
+    "build:python": "python3 scripts/build_sidecar.py",
     "build": "npm run build:python && node scripts/ensure-embeddings.cjs && tsc && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
