RAG: add BM25 hybrid keyword+semantic fusion; introduce K8s-aware chunking utilities; planner query rewriting in supervisor; requirements updated (rank-bm25).

--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -24,3 +24,6 @@ sse-starlette>=2.0.0
 
 # Build Tools (for creating standalone binary)
 pyinstaller>=6.0.0
+
+# Keyword search (BM25) for hybrid RAG
+rank-bm25>=0.2.2
