fix(agent): enhance resilience and logic
- Fix timeout issues in reflection (60s).
- Add Smart Deduplication to prevent infinite loops in worker.
- Fix node diagnosis hallucination (no events != bad).
- Remove dangerous placeholders from error hints.
- Fix DMG build by skipping Jenkins cosmetic steps.

--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
   ],
   "scripts": {
     "dev": "vite --port 1422 --host 127.0.0.1",
-    "lint": "tsc --noEmit",
+    "type-check": "tsc --noEmit",
     "build:python": "python3 scripts/build_sidecar.py",
-    "build": "npm run build:python && node scripts/ensure-embeddings.cjs && tsc && vite build",
+    "build:web": "node scripts/ensure-embeddings.cjs && vite build",
+    "build": "npm run build:python & npm run build:web & wait && SKIP_JENKINS=1 tauri build",
     "preview": "vite preview",
     "tauri": "tauri",
     "test": "vitest run",
