--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ src-tauri/cluster-info/
 cluster-info/
 src-tauri/resources/kb_embeddings.json
 src-tauri/resources/knowledge/mcp-integration.json
+src-tauri/resources/agent-server
 
 # OS
 .DS_Store
