--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "description": "Fast Kubernetes IDE with autonomous AI debugging. Tauri + Rust + Ollama for read-only incident analysis and native performance.",
   "license": "SEE LICENSE IN LICENSE",
-  "version": "0.2.34",
+  "version": "0.2.35",
   "type": "module",
   "keywords": [
     "kubernetes",
@@ -40,6 +40,7 @@
     "@tanstack/react-query-persist-client": "^5.90.13",
     "@tauri-apps/api": "^2.9.1",
     "@tauri-apps/plugin-dialog": "^2.4.2",
+    "@tauri-apps/plugin-fs": "^2.4.4",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-process": "^2.3.1",
     "@tauri-apps/plugin-updater": "^2.9.0",
