chore(release): v0.2.36 - retry release build

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "description": "Fast Kubernetes IDE with autonomous AI debugging. Tauri + Rust + Ollama for read-only incident analysis and native performance.",
   "license": "SEE LICENSE IN LICENSE",
-  "version": "0.2.35",
+  "version": "0.2.36",
   "type": "module",
   "keywords": [
     "kubernetes",
@@ -27,7 +27,11 @@
     "type-check": "tsc --noEmit",
     "build:python": "python3 scripts/build_sidecar.py",
     "build:web": "node scripts/ensure-embeddings.cjs && vite build",
+    "build:rust": "cargo build --release --manifest-path src-tauri/Cargo.toml",
+    "build:quick": "npm run build:web && npm run build:rust",
+    "build:app": "npm run build:web && SKIP_JENKINS=1 tauri build",
     "build": "npm run build:python & npm run build:web & wait && SKIP_JENKINS=1 tauri build",
+    "build:full": "npm run build",
     "preview": "vite preview",
     "tauri": "tauri",
     "test": "vitest run",
