--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "opspilot"
-version = "0.2.62"
+version = "0.2.63"
 description = "Fast Kubernetes IDE with autonomous AI debugging. Tauri + Rust + Ollama for read-only incident analysis."
 authors = ["you"]
 license = "BUSL-1.1"
@@ -41,6 +41,7 @@ tauri-plugin-http = "2.5.4"
 tauri-plugin-opener = "2"
 keyring = "3.6.3"
 which = "6"
+lazy_static = "1.5.0"
 
 [features]
 default = ["custom-protocol"]
