--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -40,6 +40,8 @@ dirs = "5"
 tauri-plugin-fs = "2.4.4"
 tauri-plugin-http = "2.5.4"
 tauri-plugin-opener = "2"
+log = "0.4"
+tauri-plugin-log = "2"
 keyring = "3.6.3"
 which = "6"
 base64 = "0.22.1"
